# attitude-correction-sim

./: .gitignore  CMakeLists.txt  README.md  sim_with_control_viewer.cpp  sim_with_viewer.cpp
command_sim/: CMakeLists.txt
command_sim/include/: command_sim.hpp
command_sim/src/: command_sim.cpp
control/: CMakeLists.txt
control/include/: control_bridge.h  control_non_pid_law_1.h  control_proxy.h  control_test.h  control_utils.h
control/include/algs/: control_eigenaxis.h  control_eigenaxisInt.h  control_pid.h
control/include/math/: mmath.h  qmath.h  vmath.h
control/src/: control_bridge.c  control_proxy.c  control_utils.c  exper_test.c
control/src/algs/: control_eigenaxis.c  control_eigenaxisInt.c  control_pid.c
control/src/math/: mmath.c  qmath.c  vmath.c
control/tests/vmqmath/: exper.cpp  test_mmath.cpp  test_qmath.cpp  test_vmath.cpp
control_sim/: CMakeLists.txt
control_sim/include/: control_sim.hpp
control_sim/src/: control_sim.cpp
old_and_unused/: control_pid.c  control_pid.h  rigidbody.c  rigidbody_sim.cpp  vmath.c
old_and_unused/include/: attitude_viewer.hpp  rigidbody.h  rigidbody_sim.hpp  vmath.h
old_and_unused/include/glad/: glad.h
old_and_unused/src/: attitude_viewer.cpp
physics_sim/: CMakeLists.txt
physics_sim/include/: physics_sim.hpp  rigidbody.hpp
physics_sim/src/: physics_sim.cpp  rigidbody.cpp
sim_viewer/: CMakeLists.txt
sim_viewer/include/: sim_viewer.hpp
sim_viewer/src/: glad.c  sim_viewer.cpp
vmqmath/: CMakeLists.txt
vmqmath/include/: vmath.h
vmqmath/src/: mmath.c  qmath.c  vmath.c
vmqmath/tests/: test_mmath.cpp  test_qmath.cpp  test_vmath.cpp
